--- a/css/style.css
+++ b/css/style.css
@@ -16,10 +16,9 @@ body {
 .element {
     display: block;
     position: absolute;
-    border-radius: 50%;
+    /*border-radius: 50%;*/
     /*box-shadow: 0 0 0px rgb(0, 186, 255);*/
-    /*border: 1px solid black;*/
+    border: 1px solid black;
     margin: 2px;
-    background-color: rgb(0, 186, 255);
-    opacity: 0;
+    background-color: #000000;
 }
